Fix attributes types on AnalyserNode as specification of web audio.
According to specification, minDecibels, maxDicibels and smoothingTimeConstant are defined to double.
Specification mismatched, internal member valuables already are defined to double as well.
Do not need to cast from float to double.

http://www.w3.org/TR/webaudio/#AnalyserNode

BUG=356636

Review URL: https://codereview.chromium.org/212793002

git-svn-id: svn://svn.chromium.org/blink/trunk@170469 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/webaudio/dom-exceptions.html
+++ b/LayoutTests/webaudio/dom-exceptions.html
@@ -77,6 +77,8 @@ function runTest() {
 
     shouldThrow("node.minDecibels = -10");
     shouldThrow("node.maxDecibels = -150");
+    shouldThrow("node.minDecibels = -30");
+    shouldThrow("node.maxDecibels = -100");
     shouldThrow("node.smoothingTimeConstant = -0.1");
     shouldThrow("node.smoothingTimeConstant = 1.5");
 
