Fix timing out of perf test: Canvas/upload-canvas-2d-to-texture.html
content_shell can not decode mov, so this CL makes canvas tests use mp4 file.
the desktop Perf bots (Windows, Mac, and Linux) do actually build Chrome-branded
binaries including all of the media codecs so H.264 encoded mp4 file can be
decoded.

bear-1280x720.mp4 is copied from chromium; src/media/test/data
Canvas video perf tests run on only the platform which can decode mp4 video.

BUG=242244, 358168

Review URL: https://codereview.chromium.org/219023009

git-svn-id: svn://svn.chromium.org/blink/trunk@170521 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/PerformanceTests/Canvas/upload-video-to-sub-texture.html
+++ b/PerformanceTests/Canvas/upload-video-to-sub-texture.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<video id="video" autoplay="true" loop>
-    <source type="video/mp4">
-</video>
+<video id="video" loop></video>
 <script src="../resources/runner.js"></script>
 <script src="resources/canvas_runner.js"></script>
 <script>
@@ -22,7 +20,10 @@ function addPlayCallback(videoElement) {
     // This logic makes sure this perf test starts after playing the video.
     videoElement.addEventListener("canplaythrough", startVideo, true);
     videoElement.addEventListener("play", startPerfTest, true);
-    videoElement.src = "../resources/720x576i-anamorphic.mov";
+    videoElement.addEventListener('error', function(ev) {
+        CanvasRunner.logFatalError("\nmp4 codec is not supported on this platform. Received error event:" + ev.target.error.code + "\n");
+    }, false);
+    videoElement.src = "../resources/bear-1280x720.mp4";
 }
 
 function startVideo() {
