--- a/LayoutTests/animations/interpolation/webkit-transform-origin-interpolation.html
+++ b/LayoutTests/animations/interpolation/webkit-transform-origin-interpolation.html
@@ -21,7 +21,7 @@
 <script src="resources/interpolation-test.js"></script>
 <script>
 assertInterpolation({
-  property: 'transform-origin',
+  property: '-webkit-transform-origin',
   from: '0% 50% 5px',
   to: '100% 150% 0px'
 }, [
