--- a/LayoutTests/inspector/tracing.html
+++ b/LayoutTests/inspector/tracing.html
@@ -50,15 +50,22 @@ function test()
         InspectorTest.addResult("Event sanity test done");
     }
 
+    var events = [];
+    function onTraceEvents(event)
+    {
+        events = events.concat(event.data);
+    }
+
     function onTracingComplete()
     {
         InspectorTest.addResult("Tracing complete");
-        runEventsSanityCheck(WebInspector.tracingAgent.events());
+        WebInspector.tracingAgent.removeEventListener(WebInspector.TracingAgent.Events.EventsCollected, onTraceEvents);
+        runEventsSanityCheck(events);
         InspectorTest.completeTest();
     }
 
+    WebInspector.tracingAgent.addEventListener(WebInspector.TracingAgent.Events.EventsCollected, onTraceEvents);
     WebInspector.tracingAgent.start("", "", onTracingStarted);
-    setTimeout(InspectorTest.completeTest.bind(InspectorTest), 2000);
     function onTracingStarted(error)
     {
         InspectorTest.addResult("Tracing started (error: " + JSON.stringify(error) + ")");
