--- a/LayoutTests/fast/canvas/canvas-lose-restore-googol-size.html
+++ b/LayoutTests/fast/canvas/canvas-lose-restore-googol-size.html
@@ -1,30 +1,35 @@
-description("Test the behavior of canvas recovery after a gpu context loss");
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+<head>
+<script src="../../resources/js-test.js"></script>
+</head>
+<body>
+<script>
+description("Tests to ensure correct behaviour of canvas loss and restoration when size is extremely large then, restored to a reasonable value.");
 
-var ctx;
-var lostEventHasFired = false;
-var contextLostTest;
-
-if (window.internals && window.testRunner) {
+if (window.testRunner) {
     testRunner.dumpAsText();
-    var canvas = document.createElement('canvas');
-    canvas.addEventListener('contextlost', contextLost);
-    canvas.addEventListener('contextrestored', contextRestored);
-    ctx = canvas.getContext('2d');
-    document.body.appendChild(ctx.canvas);
-    verifyContextLost(false);
-    window.internals.loseSharedGraphicsContext3D();
-    // for the canvas to realize it Graphics context was lost we must try to use the canvas
-    ctx.fillRect(0, 0, 1, 1);
-    if (!ctx.isContextLost()) {
-        debug('<span>Aborting test: Graphics context loss did not destroy canvas contents. This is expected if canvas is not accelerated.</span>');
-    } else {
-        verifyContextLost(true);
-        testRunner.waitUntilDone();
-    }
-} else {
-    testFailed('This test requires window.internals and window.testRunner.');
+    testRunner.waitUntilDone();
 }
 
+var canvas = document.createElement('canvas')
+canvas.addEventListener('contextlost', contextLost);
+canvas.addEventListener('contextrestored', contextRestored);
+var ctx = canvas.getContext('2d');
+var lostEventHasFired = false;
+verifyContextLost(false);
+
+var googol = Math.pow(10,100);
+canvas.width = googol;
+canvas.height = googol;
+verifyContextLost(true);
+canvas.width = googol;
+verifyContextLost(true);
+canvas.width = 100;
+canvas.height = 100;
+verifyContextLost(true); // Restoration is async.
+
+// Restore a sane dimension
 
 function verifyContextLost(shouldBeLost) {
     // Verify context loss experimentally as well as isContextLost()
@@ -57,5 +62,10 @@ function contextRestored() {
         testFailed('Context restored event was dispatched before a context lost event.');
     }
     verifyContextLost(false);
-    testRunner.notifyDone();
+	if (window.testRunner) {
+    	testRunner.notifyDone(); 
+    }
 }
+</script>
+</body>
+</html>
