--- a/LayoutTests/http/tests/inspector/stylesheet-source-mapping.html
+++ b/LayoutTests/http/tests/inspector/stylesheet-source-mapping.html
@@ -12,6 +12,7 @@ function test()
     var finalMappedLocation;
     InspectorTest.createWorkspace();
     var cssModel = new WebInspector.CSSStyleModel(WebInspector.targetManager.activeTarget(), InspectorTest.testWorkspace);
+    WebInspector.targetManager.activeTarget().cssModel = cssModel;
     var mapping = new WebInspector.CSSStyleSheetMapping(cssModel, InspectorTest.testWorkspace, InspectorTest.testNetworkWorkspaceProvider);
 
     InspectorTest.waitForWorkspaceUISourceCodeAddedEvent(cssUISourceCodeAdded);
@@ -24,7 +25,7 @@ function test()
 
     function locationsUpdated()
     {
-        var uiLocation = cssModel.rawLocationToUILocation(new WebInspector.CSSLocation("http://localhost:8000/inspector/resources/example.css", 2, 3));
+        var uiLocation = new WebInspector.CSSLocation(WebInspector.targetManager.activeTarget(), "http://localhost:8000/inspector/resources/example.css", 2, 3).toUILocation();
         if (uiLocation.uiSourceCode.url.indexOf(".scss") === -1)
             return;
         finalMappedLocation = uiLocation.uiSourceCode.url + ":" + uiLocation.lineNumber + ":" + uiLocation.columnNumber;
@@ -71,7 +72,7 @@ function test()
 
     function rawLocationToUILocation(line, column)
     {
-        return cssModel.rawLocationToUILocation(new WebInspector.CSSLocation("http://localhost:8000/inspector/resources/example.css", line, column));
+        return new WebInspector.CSSLocation(WebInspector.targetManager.activeTarget(), "http://localhost:8000/inspector/resources/example.css", line, column).toUILocation();
     }
 
     function afterStyleSheetAdded()
