--- a/LayoutTests/inspector/sources/debugger/async-callstack-eval.html
+++ b/LayoutTests/inspector/sources/debugger/async-callstack-eval.html
@@ -38,10 +38,10 @@ var test = function()
 
     function step2()
     {
-        InspectorTest.runTestFunctionAndWaitUntilPaused(didPaused);
+        InspectorTest.runTestFunctionAndWaitUntilPaused(didPause);
     }
 
-    function didPaused(callFrames, reason, breakpointIds, asyncStackTrace)
+    function didPause(callFrames, reason, breakpointIds, asyncStackTrace)
     {
         InspectorTest.captureStackTrace(callFrames, asyncStackTrace);
 
