--- a/LayoutTests/inspector/sources/debugger/debug-inlined-scripts.html
+++ b/LayoutTests/inspector/sources/debugger/debug-inlined-scripts.html
@@ -58,7 +58,7 @@ var test = function()
 
     function step5(callFrames)
     {
-        if (callFrames[0].location.lineNumber !== 9) {
+        if (callFrames[0].location().lineNumber !== 9) {
             InspectorTest.resumeExecution(InspectorTest.waitUntilPaused.bind(null, step5));
             return;
         }
