--- a/LayoutTests/inspector/sources/debugger/debugger-return-value.html
+++ b/LayoutTests/inspector/sources/debugger/debugger-return-value.html
@@ -31,7 +31,7 @@ var test = function()
     {
         if (stepCount < 2) {
             for (var i = 0, frame; frame = callFrames[i]; ++i)
-                InspectorTest.assertTrue(!frame.returnValue, "Unexpected returnValue in frame #" + i);
+                InspectorTest.assertTrue(!frame.returnValue(), "Unexpected returnValue in frame #" + i);
             WebInspector.panels.sources._stepOverButton.element.click();
             InspectorTest.waitUntilResumed(InspectorTest.waitUntilPaused.bind(InspectorTest, step2));
         } else {
