--- a/LayoutTests/inspector/sources/debugger/pause-in-inline-script.html
+++ b/LayoutTests/inspector/sources/debugger/pause-in-inline-script.html
@@ -59,7 +59,7 @@ var test = function()
             return;
         }
         var frame = callFrames[callFrameIndex];
-        var uiLocation = WebInspector.debuggerModel.rawLocationToUILocation(frame.location);
+        var uiLocation = frame.location().toUILocation();
         InspectorTest.showUISourceCode(uiLocation.uiSourceCode, dumpCallFrameLine);
 
         function dumpCallFrameLine(sourceFrame)
